--- a/_config.yml
+++ b/_config.yml
@@ -281,7 +281,6 @@ compress_html:
   ignore:
     envs: development
 
-
 # Defaults
 defaults:
   # _posts
@@ -295,3 +294,5 @@ defaults:
       comments: # true
       share: true
       related: true
+      toc: true
+      toc_sticky: true
